--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@benjeau/react-native-draw-example",
+  "name": "exampleDrawer",
   "description": "Example app for @benjeau/react-native-draw",
   "version": "0.0.1",
   "private": true,
@@ -9,33 +9,34 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "start": "expo start",
-    "test": "jest",
-    "postinstall": "patch-package"
+    "test": "jest"
   },
   "dependencies": {
-    "@react-native-community/slider": "4.2.1",
+    "@react-native-community/slider": "4.2.4",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
-    "expo": "^45.0.0",
-    "expo-splash-screen": "~0.15.1",
-    "react": "17.0.1",
-    "react-dom": "17.0.2",
-    "react-native": "0.68.2",
-    "react-native-gesture-handler": "2.2.1",
-    "react-native-safe-area-context": "4.2.4",
-    "react-native-screens": "~3.11.1",
-    "react-native-svg": "12.3.0",
-    "react-native-unimodules": "~0.15.0",
-    "react-native-web": "0.17.7"
+    "expo": "^1.0.0",
+    "expo-splash-screen": "~0.17.5",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
+    "react-native": "0.70.5",
+    "react-native-gesture-handler": "~2.8.0",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
+    "react-native-svg": "13.4.0",
+    "react-native-unimodules": "^0.14.10",
+    "react-native-web": "~0.18.7",
+    "typescript": "^4.6.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
+    "@babel/core": "^7.19.3",
     "@babel/runtime": "^7.9.6",
-    "@types/react-native": "0.68.2",
+    "@types/react": "~18.0.24",
+    "@types/react-native": "~0.70.6",
     "babel-loader": "^8.2.3",
-    "babel-plugin-module-resolver": "^4.0.0",
-    "babel-preset-expo": "8.5.1",
-    "expo-cli": "^4.0.13",
-    "jest": "^27.5.0"
+    "babel-plugin-module-resolver": "1.0.0",
+    "babel-preset-expo": "^1.0.0",
+    "expo-cli": "^6.2.1",
+    "jest": "^26.6.3"
   }
 }
